--- a/application.yaml
+++ b/application.yaml
@@ -24,19 +24,24 @@ spring:
         one-indexed-parameters: false
         max-page-size: 2000
   datasource:
-    url: jdbc:mysql://localhost:3306/archetype
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    username: ${mysql_username}
-    password: ${mysql_password} # dummy password,
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+    url: jdbc:h2:mem:testdb
+    #url: jdbc:mysql://localhost:3306/archetype
+    #driver-class-name: com.mysql.cj.jdbc.Driver
+    #username: ${mysql_username}
+    #password: ${mysql_password} # dummy password,
   jpa:
-    hibernate:
-      ddl-auto: none
+    #hibernate:
+      #ddl-auto: none
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL5Dialect
-  redis:  
-    host: localhost
-    port: 6379
+        dialect: org.hibernate.dialect.H2Dialect
+        #/dialect: org.hibernate.dialect.MySQL5Dialect
+  #redis:  
+  #  host: localhost
+  #  port: 6379
 
 logging:
   level:
